--- a/kodilla-stream/build.gradle
+++ b/kodilla-stream/build.gradle
@@ -12,6 +12,5 @@ repositories {
 }
 
 dependencies {
-    testCompile (group: 'junit', name: 'junit', version: '4.12')
-    testCompile('org.mockito:mockito-all:1.10.19')
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
