--- a/kodilla-exception/build.gradle
+++ b/kodilla-exception/build.gradle
@@ -2,6 +2,20 @@ plugins {
     id 'java'
 }
 
+
+
+group 'com.kodilla'
+version '0.0.1-SNAPSHOT'
+
+sourceCompatibility = 1.8
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
 group 'com.kodilla'
 version '0.0.1-SNAPSHOT'
 
