--- a/kodilla-patterns2/build.gradle
+++ b/kodilla-patterns2/build.gradle
@@ -16,6 +16,6 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'org.springframework.boot:spring-boot-starte-aop'
-	
+	//implementation 'org.springframework.boot:spring-boot-starte-aop'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 }
