--- a/kodilla-patterns2/build.gradle
+++ b/kodilla-patterns2/build.gradle
@@ -18,4 +18,5 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	//implementation 'org.springframework.boot:spring-boot-starte-aop'
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
+	compile group: 'org.aspectj', name: 'aspectjrt', version: '1.9.2'
 }
