--- a/kodilla-patterns2/build.gradle
+++ b/kodilla-patterns2/build.gradle
@@ -16,7 +16,6 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	//implementation 'org.springframework.boot:spring-boot-starte-aop'
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
-	compile group: 'org.aspectj', name: 'aspectjrt', version: '1.9.2'
+	//compile group: 'org.aspectj', name: 'aspectjrt', version: '1.9.2'
 }
